--- a/css/shop.css
+++ b/css/shop.css
@@ -53,7 +53,10 @@ body {
   color: white;
   padding: 5%;
 }
-
+#aboutLast p {
+  padding: 2%;
+  width: 50%;
+}
 @media (max-width: 768px) {
   .catalogue {
     display: flex;
@@ -64,6 +67,14 @@ body {
 }
 
 @media (max-width: 426px) {
+  #aboutLast {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #aboutLast p {
+    width: 100%;
+  }
   .catalogue {
     flex-wrap: wrap;
     row-gap: 20px;
